src/tests/snapshots/cclv__tests__acceptance_stats_session_mismatch__bug_multi_session_stats.snap
---
source: src/tests/acceptance_stats_session_mismatch.rs
expression: output
---
┌Conversations─────────────────────────────────────────────────────────────────────────────────────┐
│ Main │ toolu_beta_sub                                                                            │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Main [Opus] (3 entries)───────────────────────────────────────────────────────────────────────────┐
│                                                                                                  │
││  2 Beta session - Main agent response 1                                                         │
│── ↓5.0k/5.0k ↑500/500 / $0.11 | Context: 5.5k (2%) ──                                            │
││  3 Beta session - Main agent response 2                                                         │
│── ↓6.0k/6.0k ↑600/600 / $0.14 | Context: 6.6k (3%) ──                                            │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Statistics ──────────────────────────────────────────────────────────────────────────────────────┐
│Tokens:                                                                                           │
│  Input:  11,800                                                                                  │
│  Output: 1,180                                                                                   │
│  Total:  12,980                                                                                  │
│                                                                                                  │
│Estimated Cost:                                                                                   │
│  $0.27                                                                                           │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
[LIVE] Wrap: On | q: Quit | ?: Help | /: Search | s: Stats | Tab: Cycle panes
