src/tests/snapshots/cclv__tests__acceptance_stats_session_mismatch__bug_stats_main_tab.snap
---
source: src/tests/acceptance_stats_session_mismatch.rs
expression: main_tab_output
---
┌Conversations─────────────────────────────────────────────────────────────────────────────────────┐
│ Main │ toolu_sub_001                                                                             │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Main [Opus] (3 entries)───────────────────────────────────────────────────────────────────────────┐
│                                                                                                  │
││  2 Main agent response 1                                                                        │
│── ↓1.0k/1.0k ↑100/100 / $0.02 | Context: 1.1k (0%) ──                                            │
││  3 Main agent response 2                                                                        │
│── ↓2.0k/2.0k ↑200/200 / $0.04 | Context: 2.2k (1%) ──                                            │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Statistics ──────────────────────────────────────────────────────────────────────────────────────┐
│Tokens:                                                                                           │
│  Input:  3,125                                                                                   │
│  Output: 325                                                                                     │
│  Total:  3,450                                                                                   │
│                                                                                                  │
│Estimated Cost:                                                                                   │
│  $0.07                                                                                           │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
[LIVE] Wrap: On | q: Quit | ?: Help | /: Search | s: Stats | Tab: Cycle panes
