src/tests/snapshots/cclv__tests__acceptance_stats_session_mismatch__bug_stats_subagent_tab.snap
---
source: src/tests/acceptance_stats_session_mismatch.rs
expression: subagent_tab_output
---
┌Conversations─────────────────────────────────────────────────────────────────────────────────────┐
│ Main │ toolu_sub_001                                                                             │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌toolu_sub_001 [Haiku] (2 entries)─────────────────────────────────────────────────────────────────┐
││  1 Subagent response 1                                                                          │
│── ↓50/50 ↑10/10 / $0.00 | Context: 60 (0%) ──                                                    │
││  2 Subagent response 2                                                                          │
│── ↓75/75 ↑15/15 / $0.00 | Context: 90 (0%) ──                                                    │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Statistics (Subagent) ───────────────────────────────────────────────────────────────────────────┐
│Tokens:                                                                                           │
│  Input:  125                                                                                     │
│  Output: 25                                                                                      │
│  Total:  150                                                                                     │
│                                                                                                  │
│Estimated Cost:                                                                                   │
│  $0.00                                                                                           │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
[LIVE] Wrap: On | q: Quit | ?: Help | /: Search | s: Stats | Tab: Cycle panes
